--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -16,7 +16,7 @@
 
     <!--jACKY 2016-3-25-->
     {% load static %}
-    <link href="{% static 'css/index.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/global.css' %}" rel="stylesheet" >
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/jquery.cookie.js' %}"></script>
     <script src="{% static 'js/index.min.js' %}"></script>
@@ -36,69 +36,31 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="http://agridata.iask.in/index" class="navbar-brand">
+          <a href="/index" class="navbar-brand">
             <img src="{% static  "img/chartsite.png" %}" alt="农业统计数据可视化平台欢迎你" style="margin-top: -5px;">
           </a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-          <ul class="nav navbar-nav">
-            <li><a href="{% url  'index' %}">网站首页</a></li>
-            <li><a href="{% url  'index' %}">数据资源<i class="gif-hot"></i></a> </li>
-            <li><a href="{% url  'index' %}">可视分析</a></li>
-            <li><a href="{% url  'index' %}">价格监测</a></li>
-            <li><a href="{% url  'index' %}">新闻动态</a></li>
-            <li><a href="{% url  'service' %}">服务支持</a></li>
-            <li>
+            <ul class="nav navbar-nav">
+                <li><a href="{% url  'index' %}">网站首页</a></li>
+                <li><a href="{% url  'index' %}">数据资源<i class="gif-hot"></i></a> </li>
+                <li><a href="{% url  'index' %}">可视分析</a></li>
+                <li><a href="{% url  'index' %}">价格监测</a></li>
+                <li><a href="{% url  'index' %}">新闻动态</a></li>
+                <li><a href="{% url  'service' %}">服务支持</a></li>
+                <li>
               <button id="labBtn" type="button" class="btn btn-fresh text-uppercase">
                 <i class="glyphicon glyphicon-cloud"></i> 数据共享
               </button>
             </li>
-          </ul>
-
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://agridata.iask.in/user/login"><i class="fa fa-sign-in"></i> 登录 </a></li>
-            <li><a href="http://agridata.iask.in/user/register"><i class="fa fa-pencil"></i> 注册</a></li>
-          </ul>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="/user/login"><i class="fa fa-sign-in"></i> 登录 </a></li>
+                <li><a href="/user/register"><i class="fa fa-pencil"></i> 注册</a></li>
+            </ul>
         </nav>
       </div>
-{#        <script>#}
-{#            $(".nav.navbar-nav.navbar-right").click(function () {#}
-{#                this.innerHTML("<li id=\"userInfo\" class=\"dropdown\">\n" +#}
-{#                    "                    <a href=\"/personal/59ccf5620c4a294807261678\" class=\"dropdown-toggle\" data-token=\"59ccf5620c4a294807261678\">\n" +#}
-{#                    "                        <img class=\"img-circle\" src=\"http://q.qlogo.cn/qqapp/101161717/53B9CD13FD0DB78940478C37D13D5D14/100\">\n" +#}
-{#                    "                        何言\n" +#}
-{#                    "                        <b class=\"caret\"></b>\n" +#}
-{#                    "                    <span class=\"fa fa-envelope pull-right message\" style=\"font-size: 1.5em; display: none;\"> <span class=\"navbar-unread count\">100</span></span></a>\n" +#}
-{#                    "                    <ul id=\"userMenu\" class=\"dropdown-menu\" style=\"display: none;\">\n" +#}
-{#                    "                        <li>\n" +#}
-{#                    "                            <a href=\"/message\">我的消息\n" +#}
-{#                    "                                <span class=\"fa fa-envelope pull-right\"></span>\n" +#}
-{#                    "                            </a>\n" +#}
-{#                    "                        </li>\n" +#}
-{#                    "                        <li class=\"divider\"></li>\n" +#}
-{#                    "                        <li><a href=\"/account\">账号设置\n" +#}
-{#                    "                                <span class=\"glyphicon glyphicon-cog pull-right\"></span></a>\n" +#}
-{#                    "                        </li>\n" +#}
-{#                    "                        <li class=\"divider\"></li>\n" +#}
-{#                    "                        <li>\n" +#}
-{#                    "                            <a href=\"http://i.hubwiz.com/invite\">邀请朋友\n" +#}
-{#                    "                                <span class=\"fa fa-users pull-right\"></span>\n" +#}
-{#                    "                            </a>\n" +#}
-{#                    "                        </li>\n" +#}
-{#                    "                        <li class=\"divider\"></li>\n" +#}
-{#                    "                        <li>\n" +#}
-{#                    "                            <a href=\"http://i.hubwiz.com/coupon\">优惠券管理\n" +#}
-{#                    "                                <span class=\"fa fa-credit-card pull-right\"></span>\n" +#}
-{#                    "                            </a>\n" +#}
-{#                    "                        </li>\n" +#}
-{#                    "                        <li class=\"divider\"></li>\n" +#}
-{#                    "                        <li><a href=\"/logoff\">安全退出\n" +#}
-{#                    "                                <span class=\"glyphicon glyphicon-log-out pull-right\"></span></a>\n" +#}
-{#                    "                        </li>\n" +#}
-{#                    "                    </ul>\n" +#}
-{#                    "                </li>")#}
-{#            })#}
-{#        </script>#}
+
     </header>
     <!--头部文件结束-->
 
@@ -117,9 +79,9 @@
       </p>
       <ul class="bdsharebuttonbox bdshare-button-style0-16" data-bd-bind="1512287116041">
         <li><a data-cmd="qzone" class="weixin" title="微信" href="#"></a></li>
-        <li><a data-cmd="qzone" class="kongjian" title="QQ空间" href="http://agridata.iask.in/#"></a></li>
-        <li><a data-cmd="tsina" class="xinlang" title="新浪微博" href="http://agridata.iask.in/#"></a></li>
-        <li><a data-cmd="tqq" class="tengxun" title="腾讯微博" href="http://agridata.iask.in/#"></a></li>
+        <li><a data-cmd="qzone" class="kongjian" title="QQ空间" href="/#"></a></li>
+        <li><a data-cmd="tsina" class="xinlang" title="新浪微博" href="/#"></a></li>
+        <li><a data-cmd="tqq" class="tengxun" title="腾讯微博" href="/#"></a></li>
       </ul>
     </div>
     <div class="col-xs-12 col-sm-5 col-md-2 col-lg-2">
@@ -148,7 +110,7 @@
             图表卡片</a>
         </li>
         <li>
-          <a target="_blank" href="http://agridata.iask.in/about">
+          <a target="_blank" href="/service">
             <i class="glyphicon glyphicon-info-sign"></i>
             关于我们
           </a>
@@ -172,6 +134,8 @@
 </footer>
 <script type="text/javascript"  src="{% static 'js/heap.min.js' %}"></script>
 <script src="{% static 'js/hm.js' %}"></script>
+<script src="{% static 'js/global.js' %}"></script>
+
 <script>
     //支持IE
     if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
@@ -212,7 +176,6 @@
     //    with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
 </script>
 {% block foot %}
-
 
 {% endblock %}
 
