--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -3,6 +3,8 @@
     {% load static %}
 
     <link href="{% static 'css/login.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrapValidator.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/share_style0_16.css' %}" >
 
     <script charset="utf-8" src="{% static 'js/v.js' %}" ></script>
@@ -64,7 +66,7 @@
                                     </div>
                                     <div style="margin-top:10px" class="form-group">
                                         <div class="col-sm-6 col-xs-6"><!--jACKY 2016-3-29-->
-                                            <a href="http://agridata.iask.in/register" class="btn btn-default btn-block">
+                                            <a href="/user/register" class="btn btn-default btn-block">
                                                 <i class="glyphicon glyphicon-pencil"></i>
                                                 注册</a>
                                         </div>
@@ -100,7 +102,7 @@
         </div>
     </div>
     <script src="{% static 'js/captcha.js' %}"></script>
-    <script src="{% static 'js/login.min.js' %}"></script>
+{#    <script src="{% static 'js/login.min.js' %}"></script>#}
     <script src="{% static 'js/login.js' %}"></script>
 
 {% endblock %}
