--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -2,6 +2,7 @@
 {% block cssjs %}
     {% load static %}
     <link href="{% static 'css/register.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/register.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/share_style0_16.css' %}">
 
     <script src="{% static 'js/share.js' %}"></script>
@@ -21,12 +22,13 @@
                         <div class="form-group has-feedback">
                             <div class="col-sm-12">
                                 <div class="input-group">
-                                <span class="input-group-addon">
-                                    <i class="glyphicon glyphicon-user"></i>
-                                </span>
-                                    <input id="email" type="email" class="form-control" name="email" placeholder="邮箱" autocomplete="off" data-bv-field="email">
-                                </div><i class="form-control-feedback" data-bv-icon-for="email" style="display: none; top: 0px; z-index: 100;"></i>
-                            <small class="help-block alert alert-danger" data-bv-validator="notEmpty" data-bv-for="email" data-bv-result="NOT_VALIDATED" style="display: none; margin-bottom: 0px; margin-top: 10px;">请输入邮箱！</small><small class="help-block alert alert-danger" data-bv-validator="emailAddress" data-bv-for="email" data-bv-result="NOT_VALIDATED" style="display: none; margin-bottom: 0px; margin-top: 10px;">请输入正确的邮箱地址！</small></div>
+                                    <span class="input-group-addon">
+                                        <i class="glyphicon glyphicon-user"></i>
+                                    </span>
+                                    <input id="email" type="email" class="form-control" name="username" placeholder="邮箱" autocomplete="off" data-bv-field="email">
+                                </div>
+                                <i class="form-control-feedback glyphicon" data-bv-icon-for="email" style="top: 0px; z-index: 100;"></i>
+                            </div>
                         </div>
 
                         <div class="form-group has-feedback">
@@ -36,18 +38,20 @@
                                     <i class="glyphicon glyphicon-lock"></i>
                                 </span>
                                     <input type="password" class="form-control" name="password" placeholder="密码" autocomplete="off" data-bv-field="password">
-                                </div><i class="form-control-feedback" data-bv-icon-for="password" style="display: none; top: 0px; z-index: 100;"></i>
-                            <small class="help-block alert alert-danger" data-bv-validator="notEmpty" data-bv-for="password" data-bv-result="NOT_VALIDATED" style="display: none; margin-bottom: 0px; margin-top: 10px;">请输入密码！</small><small class="help-block alert alert-danger" data-bv-validator="callback" data-bv-for="password" data-bv-result="NOT_VALIDATED" style="display: none; margin-bottom: 0px; margin-top: 10px;">Please enter a valid value</small></div>
+                                </div>
+                                <i class="form-control-feedback glyphicon" data-bv-icon-for="password" style="top: 0px; z-index: 100;"></i>
+                            </div>
                         </div>
                         <div class="form-group has-feedback">
                             <div class="col-sm-12">
                                 <div class="input-group">
-                                <span class="input-group-addon">
-                                    <i class="glyphicon glyphicon-lock"></i>
-                                </span>
+                                    <span class="input-group-addon">
+                                        <i class="glyphicon glyphicon-lock"></i>
+                                    </span>
                                     <input id="confirmPass" type="password" data-equals="password" name="confirmPassword" class="form-control" placeholder="确认密码" autocomplete="off" data-bv-field="confirmPassword">
-                                </div><i class="form-control-feedback" data-bv-icon-for="confirmPassword" style="display: none; top: 0px; z-index: 100;"></i>
-                            <small class="help-block alert alert-danger" data-bv-validator="notEmpty" data-bv-for="confirmPassword" data-bv-result="NOT_VALIDATED" style="display: none; margin-bottom: 0px; margin-top: 10px;">请输入确认密码！</small><small class="help-block alert alert-danger" data-bv-validator="identical" data-bv-for="confirmPassword" data-bv-result="NOT_VALIDATED" style="display: none; margin-bottom: 0px; margin-top: 10px;">密码和确认密码是不一致！</small></div>
+                                </div>
+                                <i class="form-control-feedback glyphicon" data-bv-icon-for="confirmPassword" style="top: 0px; z-index: 100;"></i>
+                            </div>
                         </div>
                         <div style="margin-bottom: 15px; width: auto;" class="form-group has-feedback">
                             <div id="verify" class="col-sm-12">
@@ -56,11 +60,11 @@
                                         <i class="glyphicon glyphicon-transfer"></i>
                                     </span>
                                     <input type="text" id="id_captcha_1" class="form-control" name="verify" placeholder="验证码" autocomplete="off" data-bv-field="verify" minlength="4" maxlength="4">
-                                    <img class='captcha' src="{% static 'img/code.png' %}" alt='验证码'>
-                                    <input id='id_captcha_0' name='captcha_0' type='hidden' >
+                                    <input type="button" id="sendcode" class="btn btn-default label-danger" value="获取验证码">
+
                                 </div>
-                                <i class="form-control-feedback" data-bv-icon-for="verify" style="display: none; top: 0px; z-index: 100;"></i>
-                            <small class="help-block alert alert-danger" data-bv-validator="notEmpty" data-bv-for="verify" data-bv-result="NOT_VALIDATED" style="display: none; margin-bottom: 0px; margin-top: 10px;">请输入验证码！</small><small class="help-block alert alert-danger" data-bv-validator="callback" data-bv-for="verify" data-bv-result="NOT_VALIDATED" style="display: none; margin-bottom: 0px; margin-top: 10px;">Please enter a valid value</small></div>
+                                <i class="form-control-feedback glyphicon"  data-bv-icon-for="verify"></i>
+                            </div>
                         </div>
                         <div class="form-group">
                             <div class="col-sm-12 ">
@@ -84,12 +88,14 @@
     </div>
 </div>
          <script src="{% static 'js/captcha.js' %}"></script>
-    <script src="{% static 'js/register.min.js' %}"></script>
-{#    <script src="{% static 'js/register.js' %}"></script>#}
 
 {% endblock %}
 
 {% block foot %}
+        <script src="{% static 'js/jquery.validate.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/bootstrapValidator.js' %}"></script>
+        <script src="{% static 'js/messages_zh.js' %}"></script>
+        <script src="{% static 'js/register.js' %}"></script>
+
 {% endblock %}
