--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -17,9 +17,14 @@
     <!--jACKY 2016-3-25-->
     {% load static %}
     <link href="{% static 'css/global.css' %}" rel="stylesheet" >
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" >
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/jquery.cookie.js' %}"></script>
+
     <script src="{% static 'js/index.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery.validate.js' %}"></script>
+    <script src="{% static 'js/messages_zh.js' %}"></script>
 
     {% block cssjs %}
 
@@ -134,8 +139,8 @@
 </footer>
 <script type="text/javascript"  src="{% static 'js/heap.min.js' %}"></script>
 <script src="{% static 'js/hm.js' %}"></script>
-<script src="{% static 'js/global.js' %}"></script>
 
+<script src="{% static 'js/global.js' %}"></script>
 <script>
     //支持IE
     if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
