--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
           <div>
             <h1>用图表的方式，了解农业发展情况</h1>
             <p>让图表更有趣，数据更简单！</p>
-            <a href="http://agridata.iask.in/course" class="btn btn-primary btn-lg">
+            <a href="/course" class="btn btn-primary btn-lg">
               <i style="margin-right: 10px;" class="glyphicon glyphicon-send"></i>
               点击图表
             </a>
@@ -31,17 +31,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="http://agridata.iask.in/course/5359f6f6ec7452081a7873d8">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://agridata.iask.in/media/chartsite/cover/hongguanjingji.jpg">
+                <a href="/course/5359f6f6ec7452081a7873d8">
+                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/hongguanjingji.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="http://agridata.iask.in/course/5359f6f6ec7452081a7873d8">
+                  <a href="/course/5359f6f6ec7452081a7873d8">
                     宏观经济数据
                   </a>
                 </h5>
-                <a href="http://agridata.iask.in/course/5359f6f6ec7452081a7873d8">
+                <a href="/course/5359f6f6ec7452081a7873d8">
                   Node.js是一个基于Chrome JavaScript运行时建立的一个平台，用来方便地搭建.....
                 </a>
               </div>
@@ -51,17 +51,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="http://agridata.iask.in/course/5449c691e564e50960f1b7a9">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://agridata.iask.in/media/chartsite/cover/liangshi.jpg">
+                <a href="/course/5449c691e564e50960f1b7a9">
+                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/liangshi.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="http://agridata.iask.in/course/5449c691e564e50960f1b7a9">
+                  <a href="/course/5449c691e564e50960f1b7a9">
                    粮食专题数据
                   </a>
                 </h5>
-                <a href="http://agridata.iask.in/course/5449c691e564e50960f1b7a9">
+                <a href="/course/5449c691e564e50960f1b7a9">
                   Apache Spark 是一个用于大规模数据处理的计算引擎，数据处理专家.....
                 </a>
               </div>
@@ -71,17 +71,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="http://agridata.iask.in/course/56821c3f660c92d638a68df5">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://agridata.iask.in/media/chartsite/cover/linye.jpg">
+                <a href="/course/56821c3f660c92d638a68df5">
+                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/linye.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="http://agridata.iask.in/course/56821c3f660c92d638a68df5">
+                  <a href="/course/56821c3f660c92d638a68df5">
                    林业统计数据
                   </a>
                 </h5>
-                <a href="http://agridata.iask.in/course/56821c3f660c92d638a68df5">
+                <a href="/course/56821c3f660c92d638a68df5">
                   关键20小时之编程，其中10小时是研究，然后剩下的10小时是编写两个应用程序.....
                 </a>
               </div>
@@ -91,17 +91,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="http://agridata.iask.in/course/5507ca5be564e51314f544e4">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://agridata.iask.in/media/chartsite/cover/nongye01.jpg">
+                <a href="/course/5507ca5be564e51314f544e4">
+                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/nongye01.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="http://agridata.iask.in/course/5507ca5be564e51314f544e4">
+                  <a href="/course/5507ca5be564e51314f544e4">
                     农业统计数据
                   </a>
                 </h5>
-                <a href="http://agridata.iask.in/course/5507ca5be564e51314f544e4">
+                <a href="/course/5507ca5be564e51314f544e4">
                   有了Ionic，我们可以使用它轻松开发HTML5跨平台移动应用。
                 </a>
               </div>
@@ -111,17 +111,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="http://agridata.iask.in/course/54ee8d2de564e519b8f8dad3">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://agridata.iask.in/media/chartsite/cover/xumuye.jpg">
+                <a href="/course/54ee8d2de564e519b8f8dad3">
+                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/xumuye.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="http://agridata.iask.in/course/54ee8d2de564e519b8f8dad3">
+                  <a href="/course/54ee8d2de564e519b8f8dad3">
                     畜牧业统计数据
                   </a>
                 </h5>
-                <a href="http://agridata.iask.in/course/54ee8d2de564e519b8f8dad3">
+                <a href="/course/54ee8d2de564e519b8f8dad3">
                   JavaScript是一种属于网络的脚本语言,身处移动互联网时代，你必须要认识它。
                 </a>
               </div>
@@ -131,17 +131,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="http://agridata.iask.in/course/550a8966e564e51f041a15ba">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://agridata.iask.in/media/chartsite/cover/nongcun.jpg">
+                <a href="/course/550a8966e564e51f041a15ba">
+                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/nongcun.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="http://agridata.iask.in/course/550a8966e564e51f041a15ba">
+                  <a href="/course/550a8966e564e51f041a15ba">
                     农村统计数据
                   </a>
                 </h5>
-                <a href="http://agridata.iask.in/course/550a8966e564e51f041a15ba">
+                <a href="/course/550a8966e564e51f041a15ba">
                   MySQL是一个成熟优秀的数据库，我们可以使用它存储海量数据.....
                 </a>
               </div>
@@ -151,17 +151,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="http://agridata.iask.in/course/54d1cae088dba03f2cd1fec1">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://agridata.iask.in/media/chartsite/cover/yuye.jpg">
+                <a href="/course/54d1cae088dba03f2cd1fec1">
+                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/yuye.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="http://agridata.iask.in/course/54d1cae088dba03f2cd1fec1">
+                  <a href="/course/54d1cae088dba03f2cd1fec1">
                     渔业统计数据
                   </a>
                 </h5>
-                <a href="http://agridata.iask.in/course/54d1cae088dba03f2cd1fec1">
+                <a href="/course/54d1cae088dba03f2cd1fec1">
                   CSS3最新的样式表技术，我们使用它创造出更多令人惊叹的视觉效果.....
                 </a>
               </div>
@@ -172,11 +172,11 @@
       </div>
 
       <!-- Prev/next controls-->
-      <a href="http://agridata.iask.in/#" class="jcarousel-control-prev inactive" data-jcarouselcontrol="true">‹</a>
-      <a href="http://agridata.iask.in/#" class="jcarousel-control-next" data-jcarouselcontrol="true"> ›</a>
+      <a href="/#" class="jcarousel-control-prev inactive" data-jcarouselcontrol="true">‹</a>
+      <a href="/#" class="jcarousel-control-next" data-jcarouselcontrol="true"> ›</a>
 
       <!-- Pagination -->
-      <p class="jcarousel-pagination" data-jcarouselpagination="true"><a href="http://agridata.iask.in/#1" class="active">1</a><a href="http://agridata.iask.in/#2">2</a><a href="http://agridata.iask.in/#3">3</a><a href="http://agridata.iask.in/#4">4</a><a href="http://agridata.iask.in/#5">5</a><a href="http://agridata.iask.in/#6">6</a><a href="http://agridata.iask.in/#7">7</a></p>
+      <p class="jcarousel-pagination" data-jcarouselpagination="true"><a href="/#1" class="active">1</a><a href="/#2">2</a><a href="/#3">3</a><a href="/#4">4</a><a href="/#5">5</a><a href="/#6">6</a><a href="/#7">7</a></p>
     </div>
 
     <section class="true-environment">
@@ -193,7 +193,7 @@
           <p>搭建学习环境的繁琐过程，足以熄灭你刚刚燃起的学习兴趣。终于，以后再也不用烦恼了。</p>
           <p>每个课程都有内置的学习环境，即到即学，心无旁骛，学习起来自然事半功倍。</p>
           <img class="img-responsive" src="{% static 'img/index!true_icon.png' %}" alt="course">
-          <a class="enter btn btn-warning" href="http://agridata.iask.in/login">立即体验</a>
+          <a class="enter btn btn-warning" href="/user/login">立即体验</a>
         </div>
       </div>
     </section>
@@ -209,7 +209,7 @@
           <p>当你在阅读技术博客时，是不是希望把里面的代码跑起来？</p>
           <p>云端练习工具可以在任何一个网站上使用，看到代码，就运行它！</p>
           <img class="img-responsive left" src="{% static 'img/index!action.png' %}" alt="云端练习工具">
-          <a target="_blank" class="enter right btn btn-warning" href="http://lab123.hubwiz.com/">如何使用</a>
+          <a target="_blank" class="enter right btn btn-warning" href="/index">如何使用</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 tool_img">
           <img class="img-responsive" src="{% static 'img/index!tool.png' %}" alt="云端练习工具">
@@ -228,207 +228,13 @@
         <p>这不仅仅是出版社授权的正版电子书，还有配套的在线练习工具和示例代码！随学随练，阅读与实践同步，
           事半功倍的学习，还怕自己学不会吗？</p>
 
-        <a class="btn btn-warning enter" href="http://agridata.iask.in/books">开始读书</a>
+        <a class="btn btn-warning enter" href="/index">开始读书</a>
         <img class="img-responsive" src="{% static 'img/index!book.png' %}" alt="互动图书">
-      </div>
-    </section>
-    <section class="users">
-      <div class="title">
-        <h2>用户</h2>
-        <span>Users</span>
-        <hr>
-      </div>
-      <div class="content">
-        <div class="user-evaluation">
-          <p>无论是清晨还是黄昏，在进步的旅程中，我们风雨同舟，看看小伙伴们是如何说的！</p>
-          <div class="user-content">
-            <div class="user-content-list">
-
-              <div class="user-content_img">
-                <div class="content-hover small-content-up">
-                  <div class="user_img">
-                    <img src="{% static 'img/index!user1.png' %}" alt="用户评价">
-                  </div>
-                  <div class="user-hover">
-                    <img src="{% static 'img/index!user1.png' %}" alt="用户评价">
-                    <div class="user-text">
-                      <h5>453820401</h5>
-                      <br>
-                      <p>很适合入门，一个真实的环境运行环境，报错提示都很赞。除了nodejs，其他教程也很丰富。</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="content-hover small-content-down">
-                  <div class="user_img">
-                    <img src="{% static 'img/index!user4.png' %}" alt="用户评价">
-                  </div>
-                  <div class="user-hover">
-                    <img src="{% static 'img/index!user4.png' %}" alt="用户评价">
-                    <div class="user-text">
-                      <h5>453820401</h5>
-                      <br>
-                      <p>很适合入门，一个真实的环境运行环境，报错提示都很赞。除了nodejs，其他教程也很丰富。</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="user-content_img">
-                <div class="content-hover small-content-up">
-                  <div class="user_img">
-                    <img src="{% static 'img/index!user2.png' %}" alt="用户评价">
-                  </div>
-                  <div class="user-hover">
-                    <img src="{% static 'img/index!user2.png' %}" alt="用户评价">
-                    <div class="user-text">
-                      <h5>qinyb</h5>
-                      <br>
-                      <p>不错，知识点由浅入深，很适合新手入门，例子也比较经典，超赞!</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="content-hover small-content-down">
-                  <div class="user_img">
-                    <img src="{% static 'img/index!user3.png' %}" alt="用户评价">
-                  </div>
-                  <div class="user-hover">
-                    <img src="{% static 'img/index!user3.png' %}" alt="用户评价">
-                    <div class="user-text">
-                      <h5>317197124</h5>
-                      <br>
-                      <p>很炫酷的学习代码环境，打破了常规的视频文字教程的局限性，希望再多增加一些课程。</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="user-content_img">
-                <div class="content-hover small-content-up">
-                  <div class="user_img">
-                    <img src="{% static 'img/index!user5.png' %}" alt="用户评价">
-                  </div>
-                  <div class="user-hover">
-                    <img src="{% static 'img/index!user5.png' %}" alt="用户评价">
-                    <div class="user-text">
-                      <h5>462812449</h5>
-                      <br>
-                      <p>非常好的学习网站，对于这种无私的奉献精神，我只能说赞！！！</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="content-hover small-content-down">
-                  <div class="user_img">
-                    <img src="{% static 'img/index!user7.png' %}" alt="用户评价">
-                  </div>
-                  <div class="user-hover">
-                    <img src="{% static 'img/index!user7.png' %}" alt="用户评价">
-                    <div class="user-text">
-                      <h5>462812449</h5>
-                      <br>
-                      <p>非常好的学习网站，对于这种无私的奉献精神，我只能说赞！！！</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="user-content_img">
-                <div class="content-hover small-content-up">
-                  <div class="user_img">
-                    <img src="{% static 'img/index!user4.png' %}" alt="用户评价">
-                  </div>
-                  <div class="user-hover">
-                    <img src="{% static 'img/index!user4.png' %}" alt="用户评价">
-                    <div class="user-text">
-                      <h5>kayshaokaiwei</h5>
-                      <br>
-                      <p>通过问题式的学习更快速的掌握知识，是个很好的学习网站，推荐给各位同学，赞一个。</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="content-hover small-content-down">
-                  <div class="user_img">
-                    <img src="{% static 'img/index!user4.png' %}" alt="用户评价">
-                  </div>
-                  <div class="user-hover">
-                    <img src="{% static 'img/index!user4.png' %}" alt="用户评价">
-                    <div class="user-text">
-                      <h5>109568484</h5>
-                      <br>
-                      <p>你想js驾驭前后端吗？你想体验web开发全部流程一切尽在掌握中的快感吗。那就赶快加入我们的nodejs+mongoose学习之旅吧!</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="user-content_img">
-                <div class="content-hover small-content-up">
-                  <div class="user_img">
-                    <img src="{% static 'img/index!user9.png' %}" alt="用户评价">
-                  </div>
-                  <div class="user-hover">
-                    <img src="{% static 'img/index!user9.png' %}" alt="用户评价">
-                    <div class="user-text">
-                      <h5>贞贞子飘过</h5>
-                      <br>
-                      <p>感觉不错很多可以学习的东西，再接再励~给我们提供更多好教程~~~</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="content-hover small-content-down">
-                  <div class="user_img">
-                    <img src="{% static 'img/index!user8.png' %}" alt="用户评价">
-                  </div>
-                  <div class="user-hover">
-                    <img src="{% static 'img/index!user8.png' %}" alt="用户评价">
-                    <div class="user-text">
-                      <h5>憔悴</h5>
-                      <br>
-                      <p>正好在nodejs方面的东西，里面课程写的还不错，就是在这里入门的。希望网站做的越来越好。</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="user-content_img">
-                <div class="content-hover small-content-up">
-                  <div class="user_img">
-                    <img src="{% static 'img/index!user6.png' %}" alt="用户评价">
-                  </div>
-                  <div class="user-hover">
-                    <img src="{% static 'img/index!user6.png' %}" alt="用户评价">
-                    <div class="user-text">
-                      <h5>chhhux</h5>
-                      <br>
-                      <p>很赞啊，内容详实，虽然有时候有点小问题，但是能学到东西，而且交流群里大家互相帮助也很好。</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="content-hover small-content-down">
-                  <div class="user_img">
-                    <img src="{% static 'img/index!user10.png' %}" alt="用户评价">
-                  </div>
-                  <div class="user-hover">
-                    <img src="{% static 'img/index!user10.png' %}" alt="用户评价">
-                    <div class="user-text">
-                      <h5>1037893409</h5>
-                      <br>
-                      <p>32个赞,课程做的非常好,曾经也有些bug,提出后2个小时内修复.程序猿大大工作效率高,沟通热情积极,很不错。</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-        <p class="title_p">
-          知识那么多，应该学什么？到这里，找到最适合自己的，才是最好的！
-        </p>
       </div>
     </section>
     <div class="study">
       <p>农业统计数据可视化平台，爱生活，爱学习！</p>
-      <div class="begin"><a class="btn btn-warning" href="http://agridata.iask.in/course">开始了解</a></div>
+      <div class="begin"><a class="btn btn-warning" href="/course">开始了解</a></div>
     </div>
 {% endblock %}
 
