--- a/templates/share.html
+++ b/templates/share.html
@@ -5,11 +5,10 @@
     <script src="{% static 'js/share.js' %}"></script>
 
     <link rel="stylesheet" href="{% static 'css/share_style0_16.css' %}">
-{#    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">#}
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <script charset="utf-8" src="{% static 'js/v.js' %}"></script>
     <script type="text/javascript" async="" src="{% static 'js/heap.min.js' %}"></script>
     <script src="{% static 'js/hm.js' %}"></script>
-    <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/common.js' %}" type="text/javascript"></script>
     <!--jACKY end-->
     <style type="text/css">
