--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,11 +1,11 @@
 {% extends 'base/base.html' %}
 {% block cssjs %}
     {% load static %}
-
     <link href="{% static 'css/login.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/bootstrapValidator.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/share_style0_16.css' %}" >
+    <link href="{% static 'css/login.css' %}" rel="stylesheet">
 
     <script charset="utf-8" src="{% static 'js/v.js' %}" ></script>
 {% endblock %}
@@ -26,12 +26,13 @@
                                     <div class="form-group has-feedback" style="">
                                         <div class="col-sm-12">
                                             <div class="input-group">
-                                <span class="input-group-addon">
-                                    <i class="glyphicon glyphicon-user"></i>
-                                </span>
-                                            <input id="email" type="email" class="form-control" name="username" placeholder="邮箱" autocomplete="off" autofocus="true" data-bv-field="email">
-                                            </div><i class="form-control-feedback" data-bv-icon-for="email" style="display: none; top: 0; z-index: 100;"></i>
-                                        <small class="help-block alert alert-danger" data-bv-validator="notEmpty" data-bv-for="email" data-bv-result="NOT_VALIDATED" style="display: none; margin-bottom: 0; margin-top: 10px;">请输入邮箱！</small><small class="help-block alert alert-danger" data-bv-validator="emailAddress" data-bv-for="email" data-bv-result="NOT_VALIDATED" style="display: none; margin-bottom: 0; margin-top: 10px;">请输入正确的邮箱地址！</small></div>
+                                                <span class="input-group-addon">
+                                                    <i class="glyphicon glyphicon-user"></i>
+                                                </span>
+                                                <input id="email" type="email" class="form-control" name="username" placeholder="邮箱" autocomplete="off" autofocus="true" data-bv-field="email">
+                                            </div>
+                                            <i class="form-control-feedback glyphicon" data-bv-icon-for="email" style="top: 0; z-index: 100;"></i>
+                                        </div>
                                     </div>
                                     <div class="form-group has-feedback">
                                         <div class="col-sm-12">
@@ -40,25 +41,25 @@
                                             <i class="glyphicon glyphicon-lock"></i>
                                         </span>
                                                 <input type="password" class="form-control" name="password" placeholder="密码" autocomplete="off" data-bv-field="password">
-                                            </div><i class="form-control-feedback" data-bv-icon-for="password" style="display: none; top: 0; z-index: 100;"></i>
-                                        <small class="help-block alert alert-danger" data-bv-validator="notEmpty" data-bv-for="password" data-bv-result="NOT_VALIDATED" style="display: none; margin-bottom: 0; margin-top: 10px;">请输入密码！</small></div>
+                                            </div>
+                                            <i class="form-control-feedback glyphicon" data-bv-icon-for="password" style="top: 0; z-index: 100;"></i>
+                                        </div>
                                     </div>
-                                    <div style="margin-bottom: 15px; width: auto;" class="form-group has-feedback">
+                                    <div style="width: auto;" class="form-group has-feedback">
                                         <div id="verify" class="col-sm-12 ">
                                             <div class="input-group">
                                                 <span class="input-group-addon">
                                                     <i class="glyphicon glyphicon-transfer"></i>
                                                 </span>
-                                                <input type="text" id="id_captcha_1" class="form-control" name="verify" placeholder="验证码" autocomplete="off" data-bv-field="verify" minlength="4" maxlength="4">
+                                                <input type="text" id="id_captcha_1" class="form-control" name="response" placeholder="验证码" autocomplete="off" data-bv-field="verify" minlength="4" maxlength="4">
                                                 <img class='captcha' src="{% static 'img/code.png' %}" alt='验证码'>
                                                 <input id='id_captcha_0' name='captcha_0' type='hidden' >
+                                                <button id="shuaxing" class="btn btn-default label-primary shuaxing">刷新验证</button>
                                             </div>
-                                            <i class="form-control-feedback" data-bv-icon-for="verify" style="display: none; top: 0; z-index: 100;"></i>
-                                        <small class="help-block alert alert-danger" data-bv-validator="notEmpty" data-bv-for="verify" data-bv-result="NOT_VALIDATED" style="display: none; margin-bottom: 0; margin-top: 10px;">请输入验证码！</small>
-                                            <small class="help-block alert alert-danger" data-bv-validator="callback" data-bv-for="verify" data-bv-result="NOT_VALIDATED" style="display: none; margin-bottom: 0; margin-top: 10px;">Please enter a valid value</small>
+                                            <i class="form-control-feedback glyphicon" data-bv-icon-for="verify" style="top: 0; z-index: 100;"></i>
                                         </div>
                                     </div>
-                                    <div style="margin-top:30px" class="form-group">
+                                    <div style="margin-top:0px" class="form-group">
                                         <div class="col-sm-12">
                                             <button type="submit" class="btn btn-success btn-block">
                                                 登录</button>
@@ -101,13 +102,12 @@
             </div>
         </div>
     </div>
-    <script src="{% static 'js/captcha.js' %}"></script>
-{#    <script src="{% static 'js/login.min.js' %}"></script>#}
-    <script src="{% static 'js/login.js' %}"></script>
+
 
 {% endblock %}
 
 {% block foot %}
-        <script src="{% static 'js/bootstrap.min.js' %}"></script>
-        <script src="{% static 'js/bootstrapValidator.js' %}"></script>
+         <script src="{% static 'js/captcha.js' %}"></script>
+        <script src="{% static 'js/login.js' %}"></script>
+
 {% endblock %}
