--- a/templates/user/personal.html
+++ b/templates/user/personal.html
@@ -261,6 +261,7 @@
 
 
 {% block foot %}
+    <script> var token = ''</script>
     <script src="{% static 'js/personal.min.js' %}"></script>
     <script src="{% static 'js/mi.min.js' %}"></script>
 {% endblock %}
