--- a/templates/user/forgetpwd.html
+++ b/templates/user/forgetpwd.html
@@ -1,43 +1,74 @@
 {% extends 'base/base.html' %}
 {% block cssjs %}
     {% load static %}
-    <link href="{% static 'css/findpwd.min.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/share_style0_16.css' %}" >
-
+    <link href="{% static 'css/register.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/share_style0_16.css' %}">
 
 {% endblock %}
 
-
 {% block content %}
-
 <div class="container web-body">
     <div class="row">
-        <div class="col-md-5 col-xs-10 col-xs-offset-1" style="margin:120px auto 70px auto;float: none;">
+        <div class="col-lg-5 col-xs-12 box">
             <div class="panel panel-default well">
                 <div class="panel-heading" style="height: 50px;">
-                    <div class="panel-title" style="text-align: left">忘记密码</div>
+                    <div class="panel-title" style="text-align: left;">重置密码</div>
                 </div>
-                <div class="panel-body">
-                    <form action="http://www.hubwiz.com/findpwd#" class="form-horizontal" role="form" method="post">
-                        <div class="form-group">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                <input id="email" type="email" class="form-control" name="email" placeholder="邮箱">
+                <div style="padding-top:30px" class="panel-body">
+                    <form id="registerForm" class="form-horizontal bv-form" role="form" method="post" novalidate="novalidate">
+                        {% csrf_token %}
+                        <div class="form-group has-feedback">
+                            <div class="col-sm-12">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="glyphicon glyphicon-user"></i>
+                                    </span>
+                                    <input id="email" type="email" class="form-control" name="username" placeholder="邮箱" autocomplete="off" data-bv-field="email">
+                                </div>
+                                <i class="form-control-feedback glyphicon" data-bv-icon-for="email" style="top: 0px; z-index: 100;"></i>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="input-group">
-                                <span class="input-group-addon">
-                                    <i class="glyphicon glyphicon-transfer"></i>
-                                </span>
-                                <input type="text" id="captcha" class="form-control" name="verify" placeholder="验证码" autocomplete="off" data-bv-field="verify" minlength="4" maxlength="4">
-                                <img class='captcha' src="/static/img/code.png" alt='验证码'>
-                                <input id='id_captcha_0' name='captcha_0' type='hidden' >
 
+                        <div class="form-group has-feedback">
+                            <div class="col-sm-12">
+                                <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i class="glyphicon glyphicon-lock"></i>
+                                </span>
+                                    <input type="password" class="form-control" name="password" placeholder="更改密码" autocomplete="off" data-bv-field="password">
+                                </div>
+                                <i class="form-control-feedback glyphicon" data-bv-icon-for="password" style="top: 0px; z-index: 100;"></i>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <input id="submit" type="submit" class="btn btn-primary btn-block" value="发 送">
+                        <div class="form-group has-feedback">
+                            <div class="col-sm-12">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="glyphicon glyphicon-lock"></i>
+                                    </span>
+                                    <input id="confirmPass" type="password" data-equals="password" name="confirmPassword" class="form-control" placeholder="确认密码" autocomplete="off" data-bv-field="confirmPassword">
+                                </div>
+                                <i class="form-control-feedback glyphicon" data-bv-icon-for="confirmPassword" style="top: 0px; z-index: 100;"></i>
+                            </div>
+                        </div>
+                        <div style="margin-bottom: 15px; width: auto;" class="form-group has-feedback">
+                            <div id="verify" class="col-sm-12">
+                                <div class="input-group">
+                                    <span class="input-group-addon">
+                                        <i class="glyphicon glyphicon-transfer"></i>
+                                    </span>
+                                    <input type="text" id="id_captcha_1" class="form-control" name="verify" placeholder="验证码" autocomplete="off" data-bv-field="verify" minlength="4" maxlength="4">
+                                    <button id="sendcode" class="btn btn-default label-primary" style="width: 40%;float: right;">获取验证码</button>
+
+                                </div>
+                                <i class="form-control-feedback glyphicon"  data-bv-icon-for="verify"></i>
+                            </div>
+                        </div>
+                        <div class="form-group" style="margin-top: -10px;">
+                            <div class="col-sm-12 ">
+                                <button type="submit" class="btn btn-primary btn-block">
+                                    确认更新</button>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -45,12 +76,12 @@
         </div>
     </div>
 </div>
+
+
 {% endblock %}
 
 {% block foot %}
     <script src="{% static 'js/captcha.js' %}"></script>
-    <script charset="utf-8" src="{% static 'js/findpwd.js' %}" ></script>
+    <script src="{% static 'js/register.js' %}"></script>
 
 {% endblock %}
-
-
