--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -112,7 +112,7 @@
         <li>
           <a target="_blank" href="/service">
             <i class="glyphicon glyphicon-info-sign"></i>
-            关于我们
+            服务支持
           </a>
         </li>
         <li>
