--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
           <div>
             <h1>用图表的方式，了解农业发展情况</h1>
             <p>让图表更有趣，数据更简单！</p>
-            <a href="/course" class="btn btn-primary btn-lg">
+            <a href="/index" class="btn btn-primary btn-lg">
               <i style="margin-right: 10px;" class="glyphicon glyphicon-send"></i>
               点击图表
             </a>
@@ -31,17 +31,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="/course/5359f6f6ec7452081a7873d8">
+                <a href="/index">
                   <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/hongguanjingji.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="/course/5359f6f6ec7452081a7873d8">
+                  <a href="/index">
                     宏观经济数据
                   </a>
                 </h5>
-                <a href="/course/5359f6f6ec7452081a7873d8">
+                <a href="/index">
                   Node.js是一个基于Chrome JavaScript运行时建立的一个平台，用来方便地搭建.....
                 </a>
               </div>
@@ -51,17 +51,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="/course/5449c691e564e50960f1b7a9">
+                <a href="/index">
                   <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/liangshi.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="/course/5449c691e564e50960f1b7a9">
+                  <a href="/index">
                    粮食专题数据
                   </a>
                 </h5>
-                <a href="/course/5449c691e564e50960f1b7a9">
+                <a href="/index">
                   Apache Spark 是一个用于大规模数据处理的计算引擎，数据处理专家.....
                 </a>
               </div>
@@ -71,17 +71,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="/course/56821c3f660c92d638a68df5">
+                <a href="/index">
                   <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/linye.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="/course/56821c3f660c92d638a68df5">
+                  <a href="/index">
                    林业统计数据
                   </a>
                 </h5>
-                <a href="/course/56821c3f660c92d638a68df5">
+                <a href="/index">
                   关键20小时之编程，其中10小时是研究，然后剩下的10小时是编写两个应用程序.....
                 </a>
               </div>
@@ -91,17 +91,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="/course/5507ca5be564e51314f544e4">
+                <a href="/index">
                   <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/nongye01.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="/course/5507ca5be564e51314f544e4">
+                  <a href="/index">
                     农业统计数据
                   </a>
                 </h5>
-                <a href="/course/5507ca5be564e51314f544e4">
+                <a href="/index">
                   有了Ionic，我们可以使用它轻松开发HTML5跨平台移动应用。
                 </a>
               </div>
@@ -111,17 +111,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="/course/54ee8d2de564e519b8f8dad3">
+                <a href="/index">
                   <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/xumuye.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="/course/54ee8d2de564e519b8f8dad3">
+                  <a href="/index">
                     畜牧业统计数据
                   </a>
                 </h5>
-                <a href="/course/54ee8d2de564e519b8f8dad3">
+                <a href="/index">
                   JavaScript是一种属于网络的脚本语言,身处移动互联网时代，你必须要认识它。
                 </a>
               </div>
@@ -131,17 +131,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="/course/550a8966e564e51f041a15ba">
+                <a href="/index">
                   <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/nongcun.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="/course/550a8966e564e51f041a15ba">
+                  <a href="/index">
                     农村统计数据
                   </a>
                 </h5>
-                <a href="/course/550a8966e564e51f041a15ba">
+                <a href="/index">
                   MySQL是一个成熟优秀的数据库，我们可以使用它存储海量数据.....
                 </a>
               </div>
@@ -151,17 +151,17 @@
           <li style="width: 228px;">
             <div class="course-content">
               <div class="course-evaluation_img">
-                <a href="/course/54d1cae088dba03f2cd1fec1">
+                <a href="/index">
                   <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/yuye.jpg">
                 </a>
               </div>
               <div class="course-evaluation_text">
                 <h5>
-                  <a href="/course/54d1cae088dba03f2cd1fec1">
+                  <a href="/index">
                     渔业统计数据
                   </a>
                 </h5>
-                <a href="/course/54d1cae088dba03f2cd1fec1">
+                <a href="/index">
                   CSS3最新的样式表技术，我们使用它创造出更多令人惊叹的视觉效果.....
                 </a>
               </div>
