--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -27,7 +27,7 @@
                                                 <span class="input-group-addon">
                                                     <i class="glyphicon glyphicon-user"></i>
                                                 </span>
-                                                <input id="email" type="email" class="form-control" name="username" placeholder="邮箱"  data-bv-field="email">
+                                                <input id="email" type="email" class="form-control" name="username" placeholder="邮箱"  data-bv-field="email" value="15931897093@qq.com">
                                             </div>
                                             <i class="form-control-feedback glyphicon" data-bv-icon-for="email" style="top: 0; z-index: 100;"></i>
                                         </div>
@@ -38,7 +38,7 @@
                                         <span class="input-group-addon">
                                             <i class="glyphicon glyphicon-lock"></i>
                                         </span>
-                                                <input type="password" class="form-control" name="password" placeholder="密码" autocomplete="off" data-bv-field="password">
+                                                <input type="password" class="form-control" name="password" placeholder="密码" autocomplete="off" data-bv-field="password" value="15931897093@qq.com">
                                             </div>
                                             <i class="form-control-feedback glyphicon" data-bv-icon-for="password" style="top: 0; z-index: 100;"></i>
                                         </div>
