--- a/templates/user/account.html
+++ b/templates/user/account.html
@@ -156,7 +156,7 @@
 {% block foot %}
     <script src="{% static 'js/account.min.js' %}"></script>
     <script src="{% static 'js/mi.min.js' %}"></script>
-
+    <script src="{% static 'js/global.js' %}"></script>
 {% endblock %}
 
 
