--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -111,5 +111,5 @@
     <script src="{% static 'js/messages_zh.js' %}"></script>
     <script src="{% static 'js/captcha.js' %}"></script>
     <script src="{% static 'js/login.js' %}"></script>
-
+    <script src="{% static 'js/global.js' %}"></script>
 {% endblock %}
