--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -92,5 +92,5 @@
 {% block foot %}
     <script src="{% static 'js/captcha.js' %}"></script>
     <script src="{% static 'js/register.js' %}"></script>
-
+    <script src="{% static 'js/global.js' %}"></script>
 {% endblock %}
