--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -53,9 +53,8 @@
               </button>
             </li>
             </ul>
-            <ul class="nav navbar-nav navbar-right profile" id="user">
-{#                <li><a href="/user/login"><i class="fa fa-sign-in"></i> 登录 </a></li>#}
-{#                <li><a href="/user/register"><i class="fa fa-pencil"></i> 注册</a></li>#}
+            <ul class="nav navbar-nav navbar-right" id="user">
+                <li id="userInfo" class="dropdown"></li>
             </ul>
         </nav>
       </div>
@@ -130,9 +129,7 @@
   </div>
 </footer>
 
-<script src="{% static 'js/jquery.validate.js' %}"></script>
-<script src="{% static 'js/messages_zh.js' %}"></script>
-<script > const data = ''</script>
+
 <script>
     //支持IE
     if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
@@ -160,6 +157,7 @@
         share:[]
     };
 </script>
+<script src="{% static 'js/index.min.js' %}"></script>
 {% block foot %}
 
 {% endblock %}
