--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block cssjs %}
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/index.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/share_style0_16.css' %}">
+
     <!--jACKY end-->
 {% endblock %}
 {% block content %}
@@ -23,159 +23,159 @@
 
     </div>
     <div class="jcarousel-wrapper container">
-      <div class="course-evaluation jcarousel " data-jcarousel="true">
-        <ul style="left: 0; top: 0;">
+            <div class="course-evaluation jcarousel " data-jcarousel="true">
+                <ul style="left: -228px; top: 0px;">
 
-          <li style="width: 228px;">
-            <div class="course-content">
-              <div class="course-evaluation_img">
-                <a href="/index">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/hongguanjingji.jpg">
-                </a>
-              </div>
-              <div class="course-evaluation_text">
-                <h5>
-                  <a href="/index">
-                    宏观经济数据
-                  </a>
-                </h5>
-                <a href="/index">
-                  Node.js是一个基于Chrome JavaScript运行时建立的一个平台，用来方便地搭建.....
-                </a>
-              </div>
+                    <li style="width: 228px;">
+                        <div class="course-content">
+                            <div class="course-evaluation_img">
+                                <a href="/course/5359f6f6ec7452081a7873d8">
+                                    <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://7xk7h3.com2.z0.glb.qiniucdn.com/index!section0.png">
+                                </a>
+                            </div>
+                            <div class="course-evaluation_text">
+                                <h5>
+                                    <a href="/course/5359f6f6ec7452081a7873d8">
+                                        Node.js
+                                    </a>
+                                </h5>
+                                <a href="/course/5359f6f6ec7452081a7873d8">
+                                    Node.js是一个基于Chrome JavaScript运行时建立的一个平台，用来方便地搭建.....
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li style="width: 228px;">
+                        <div class="course-content">
+                            <div class="course-evaluation_img">
+                                <a href="/course/5449c691e564e50960f1b7a9">
+                                    <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://7xk7h3.com2.z0.glb.qiniucdn.com/index!section1.png">
+                                </a>
+                            </div>
+                            <div class="course-evaluation_text">
+                                <h5>
+                                    <a href="/course/5449c691e564e50960f1b7a9">
+                                        Spark
+                                    </a>
+                                </h5>
+                                <a href="/course/5449c691e564e50960f1b7a9">
+                                    Apache Spark 是一个用于大规模数据处理的计算引擎，数据处理专家.....
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li style="width: 228px;">
+                        <div class="course-content">
+                            <div class="course-evaluation_img">
+                                <a href="/course/56821c3f660c92d638a68df5">
+                                    <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://7xk7h3.com2.z0.glb.qiniucdn.com/index!section2.png">
+                                </a>
+                            </div>
+                            <div class="course-evaluation_text">
+                                <h5>
+                                    <a href="/course/56821c3f660c92d638a68df5">
+                                        20小时学会编程
+                                    </a>
+                                </h5>
+                                <a href="/course/56821c3f660c92d638a68df5">
+                                    关键20小时之编程，其中10小时是研究，然后剩下的10小时是编写两个应用程序.....
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li style="width: 228px;">
+                        <div class="course-content">
+                            <div class="course-evaluation_img">
+                                <a href="/course/5507ca5be564e51314f544e4">
+                                    <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://7xk7h3.com2.z0.glb.qiniucdn.com/index!section3.png">
+                                </a>
+                            </div>
+                            <div class="course-evaluation_text">
+                                <h5>
+                                    <a href="/course/5507ca5be564e51314f544e4">
+                                        Ionic
+                                    </a>
+                                </h5>
+                                <a href="/course/5507ca5be564e51314f544e4">
+                                    有了Ionic，我们可以使用它轻松开发HTML5跨平台移动应用。
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li style="width: 228px;">
+                        <div class="course-content">
+                            <div class="course-evaluation_img">
+                                <a href="/course/54ee8d2de564e519b8f8dad3">
+                                    <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://7xk7h3.com2.z0.glb.qiniucdn.com/index!section4.png">
+                                </a>
+                            </div>
+                            <div class="course-evaluation_text">
+                                <h5>
+                                    <a href="/course/54ee8d2de564e519b8f8dad3">
+                                        JavaScript
+                                    </a>
+                                </h5>
+                                <a href="/course/54ee8d2de564e519b8f8dad3">
+                                     JavaScript是一种属于网络的脚本语言,身处移动互联网时代，你必须要认识它。
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li style="width: 228px;">
+                        <div class="course-content">
+                            <div class="course-evaluation_img">
+                                <a href="/course/550a8966e564e51f041a15ba">
+                                    <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://7xk7h3.com2.z0.glb.qiniucdn.com/index!section5.png">
+                                </a>
+                            </div>
+                            <div class="course-evaluation_text">
+                                <h5>
+                                    <a href="/course/550a8966e564e51f041a15ba">
+                                        MySQL
+                                    </a>
+                                </h5>
+                                <a href="/course/550a8966e564e51f041a15ba">
+                                    MySQL是一个成熟优秀的数据库，我们可以使用它存储海量数据.....
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li style="width: 228px;">
+                        <div class="course-content">
+                            <div class="course-evaluation_img">
+                                <a href="/course/54d1cae088dba03f2cd1fec1">
+                                    <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="http://7xk7h3.com2.z0.glb.qiniucdn.com/index!section6.png">
+                                </a>
+                            </div>
+                            <div class="course-evaluation_text">
+                                <h5>
+                                    <a href="/course/54d1cae088dba03f2cd1fec1">
+                                        CSS3
+                                    </a>
+                                </h5>
+                                <a href="/course/54d1cae088dba03f2cd1fec1">
+                                    CSS3最新的样式表技术，我们使用它创造出更多令人惊叹的视觉效果.....
+                                </a>
+                            </div>
+                        </div>
+                    </li>
+
+                </ul>
             </div>
-          </li>
 
-          <li style="width: 228px;">
-            <div class="course-content">
-              <div class="course-evaluation_img">
-                <a href="/index">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/liangshi.jpg">
-                </a>
-              </div>
-              <div class="course-evaluation_text">
-                <h5>
-                  <a href="/index">
-                   粮食专题数据
-                  </a>
-                </h5>
-                <a href="/index">
-                  Apache Spark 是一个用于大规模数据处理的计算引擎，数据处理专家.....
-                </a>
-              </div>
-            </div>
-          </li>
+            <!-- Prev/next controls-->
+            <a href="#" class="jcarousel-control-prev inactive" data-jcarouselcontrol="true">‹</a>
+            <a href="#" class="jcarousel-control-next" data-jcarouselcontrol="true"> ›</a>
 
-          <li style="width: 228px;">
-            <div class="course-content">
-              <div class="course-evaluation_img">
-                <a href="/index">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/linye.jpg">
-                </a>
-              </div>
-              <div class="course-evaluation_text">
-                <h5>
-                  <a href="/index">
-                   林业统计数据
-                  </a>
-                </h5>
-                <a href="/index">
-                  关键20小时之编程，其中10小时是研究，然后剩下的10小时是编写两个应用程序.....
-                </a>
-              </div>
-            </div>
-          </li>
-
-          <li style="width: 228px;">
-            <div class="course-content">
-              <div class="course-evaluation_img">
-                <a href="/index">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/nongye01.jpg">
-                </a>
-              </div>
-              <div class="course-evaluation_text">
-                <h5>
-                  <a href="/index">
-                    农业统计数据
-                  </a>
-                </h5>
-                <a href="/index">
-                  有了Ionic，我们可以使用它轻松开发HTML5跨平台移动应用。
-                </a>
-              </div>
-            </div>
-          </li>
-
-          <li style="width: 228px;">
-            <div class="course-content">
-              <div class="course-evaluation_img">
-                <a href="/index">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/xumuye.jpg">
-                </a>
-              </div>
-              <div class="course-evaluation_text">
-                <h5>
-                  <a href="/index">
-                    畜牧业统计数据
-                  </a>
-                </h5>
-                <a href="/index">
-                  JavaScript是一种属于网络的脚本语言,身处移动互联网时代，你必须要认识它。
-                </a>
-              </div>
-            </div>
-          </li>
-
-          <li style="width: 228px;">
-            <div class="course-content">
-              <div class="course-evaluation_img">
-                <a href="/index">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/nongcun.jpg">
-                </a>
-              </div>
-              <div class="course-evaluation_text">
-                <h5>
-                  <a href="/index">
-                    农村统计数据
-                  </a>
-                </h5>
-                <a href="/index">
-                  MySQL是一个成熟优秀的数据库，我们可以使用它存储海量数据.....
-                </a>
-              </div>
-            </div>
-          </li>
-
-          <li style="width: 228px;">
-            <div class="course-content">
-              <div class="course-evaluation_img">
-                <a href="/index">
-                  <img alt="热门课程" style="border-bottom:1px solid #ddd;" class="img-responsive" src="/media/chartsite/cover/yuye.jpg">
-                </a>
-              </div>
-              <div class="course-evaluation_text">
-                <h5>
-                  <a href="/index">
-                    渔业统计数据
-                  </a>
-                </h5>
-                <a href="/index">
-                  CSS3最新的样式表技术，我们使用它创造出更多令人惊叹的视觉效果.....
-                </a>
-              </div>
-            </div>
-          </li>
-
-        </ul>
-      </div>
-
-      <!-- Prev/next controls-->
-      <a href="/#" class="jcarousel-control-prev inactive" data-jcarouselcontrol="true">‹</a>
-      <a href="/#" class="jcarousel-control-next" data-jcarouselcontrol="true"> ›</a>
-
-      <!-- Pagination -->
-      <p class="jcarousel-pagination" data-jcarouselpagination="true"><a href="/#1" class="active">1</a><a href="/#2">2</a><a href="/#3">3</a><a href="/#4">4</a><a href="/#5">5</a><a href="/#6">6</a><a href="/#7">7</a></p>
-    </div>
+            <!-- Pagination -->
+            <p class="jcarousel-pagination" data-jcarouselpagination="true"><a href="#1">1</a><a href="#2" class="active">2</a><a href="#3">3</a><a href="#4">4</a><a href="#5">5</a><a href="#6">6</a><a href="#7">7</a></p>
+        </div>
 
     <section class="true-environment">
       <div class="title">
@@ -234,8 +234,16 @@
       <p>农业统计数据可视化平台，爱生活，爱学习！</p>
       <div class="begin"><a class="btn btn-warning" href="/course">开始了解</a></div>
     </div>
+
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/global.js' %}"></script>
+
 {% endblock %}
 
 {% block foot %}
-    <script src="{% static 'js/global.js' %}"></script>
+
+
+
+
+
 {% endblock %}
