--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -90,6 +90,9 @@
 {% endblock %}
 
 {% block foot %}
+    <script src="{% static 'js/jquery.js' %}"></script>
+    <script src="{% static 'js/jquery.cookie.js' %}"></script>
+    <script src="{% static 'js/jquery.validate.js' %}"></script>
     <script src="{% static 'js/captcha.js' %}"></script>
     <script src="{% static 'js/register.js' %}"></script>
     <script src="{% static 'js/global.js' %}"></script>
