--- a/templates/invite.html
+++ b/templates/invite.html
@@ -40,6 +40,8 @@
 {% endblock %}
 
 {% block foot %}
+    <script src="{% static 'js/jquery.validate.js' %}"></script>
+    <script src="{% static 'js/messages_zh.js' %}"></script>
     <script src="{% static 'js/invite.min.js' %}"></script>
     <script src="{% static 'js/global.js' %}"></script>
 {% endblock %}
