--- a/templates/user/account.html
+++ b/templates/user/account.html
@@ -154,6 +154,8 @@
 
 
 {% block foot %}
+    <script src="{% static 'js/jquery.validate.js' %}"></script>
+    <script src="{% static 'js/messages_zh.js' %}"></script>
     <script src="{% static 'js/account.min.js' %}"></script>
     <script src="{% static 'js/mi.min.js' %}"></script>
     <script src="{% static 'js/global.js' %}"></script>
