--- a/templates/user/personal.html
+++ b/templates/user/personal.html
@@ -9,7 +9,6 @@
 
 {% endblock %}
 
-
 {% block content %}
     <div class="container-fluid web-body">
         <div class="row user-info">
@@ -261,8 +260,8 @@
 
 
 {% block foot %}
-    <script src="{% static 'js/personal.min.js' %}"></script>
+    <script src="{% static 'js/jquery.validate.js' %}"></script>
+    <script src="{% static 'js/messages_zh.js' %}"></script>
     <script src="{% static 'js/personal.js' %}"></script>
-    <script src="{% static 'js/mi.min.js' %}"></script>
 {% endblock %}
 
