--- a/templates/user/forgetpwd.html
+++ b/templates/user/forgetpwd.html
@@ -81,7 +81,9 @@
 {% endblock %}
 
 {% block foot %}
+    <script src="{% static 'js/jquery.validate.js' %}"></script>
+    <script src="{% static 'js/messages_zh.js' %}"></script>
     <script src="{% static 'js/captcha.js' %}"></script>
-    <script src="{% static 'js/register.js' %}"></script>
+    <script src="{% static 'js/forget.js' %}"></script>
     <script src="{% static 'js/global.js' %}"></script>
 {% endblock %}
