--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -53,7 +53,7 @@
             </li>
             </ul>
             <ul class="nav navbar-nav navbar-right" id="user">
-                <li id="userInfo" class="dropdown"></li>
+                <li id="userInfo" class="dropdown"><a href="/personal" class="dropdown-toggle"></a></li>
             </ul>
         </nav>
       </div>
@@ -159,7 +159,7 @@
 {% block foot %}
 
 {% endblock %}
-<script src="{% static 'js/global.js' %}"></script>
+
 
 <div id="fixedTools" class="hidden-xs hidden-sm" style="display: block;"><i class="glyphicon glyphicon-circle-arrow-up"></i></div>
 </body>
