--- a/templates/user/personal.html
+++ b/templates/user/personal.html
@@ -256,6 +256,7 @@
             </div>
         </div>
     </div>
+
 {% endblock %}
 
 
@@ -263,5 +264,7 @@
     <script src="{% static 'js/jquery.validate.js' %}"></script>
     <script src="{% static 'js/messages_zh.js' %}"></script>
     <script src="{% static 'js/personal.js' %}"></script>
+
+{#    <script src="{% static 'js/personal.min.js' %}"></script>#}
 {% endblock %}
 
