--- a/templates/index.html
+++ b/templates/index.html
@@ -233,10 +233,11 @@
       <p>农业统计数据可视化平台，爱生活，爱学习！</p>
       <div class="begin"><a class="btn btn-warning" href="/course">开始了解</a></div>
     </div>
-
+    <script src="{% static 'js/global.js' %}"></script>
 {% endblock %}
 
 {% block foot %}
+    <script src="{% static 'js/index.js' %}"></script>
 
 
 {% endblock %}
