--- a/templates/user/account.html
+++ b/templates/user/account.html
@@ -150,15 +150,15 @@
         </div>
 
     </div>
+    <script src="{% static 'js/global.js' %}"></script>
 {% endblock %}
 
 
 {% block foot %}
     <script src="{% static 'js/jquery.validate.js' %}"></script>
     <script src="{% static 'js/messages_zh.js' %}"></script>
-    <script src="{% static 'js/account.min.js' %}"></script>
+    <script src="{% static 'js/account.js' %}"></script>
     <script src="{% static 'js/mi.min.js' %}"></script>
-    <script src="{% static 'js/global.js' %}"></script>
 {% endblock %}
 
 
